<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>github.com.rev</groupId>
        <artifactId>musicbrainzws2-java-parent</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>musicbrainzws2-java</artifactId>

    <properties>
        <maven.compiler.source>18</maven.compiler.source>
        <maven.compiler.target>18</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <httpclient5.version>5.2.3</httpclient5.version>
        <apache-http.version>${httpclient5.version}</apache-http.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>github.com.rev</groupId>
            <artifactId>coverartarchive-api</artifactId>
            <version>${project.parent.version}</version>
        </dependency>
        <dependency>
            <groupId>github.com.rev</groupId>
            <artifactId>mc2java</artifactId>
            <version>${project.parent.version}</version>
        </dependency>
        <dependency>
            <groupId>github.com.rev</groupId>
            <artifactId>discid</artifactId>
            <version>${project.parent.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jdom</groupId>
            <artifactId>jdom2</artifactId>
            <version>2.0.6.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.17.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents.client5</groupId>
            <artifactId>httpclient5</artifactId>
            <version>${httpclient5.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents.core5</groupId>
            <artifactId>httpcore5</artifactId>
            <version>${apache-http.version}</version>
        </dependency>

    </dependencies>

</project>